--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "playcanvas-sync": "git+https://github.com/playcanvas/playcanvas-sync.git",
     "typescript": "^4.5.4"
   },
