--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "sourceMap": true, /* Generates corresponding '.map' file. */
     "outFile": "./build/main.build.js", /* Concatenate and emit output to single file. */
     "outDir": "./build", /* Redirect output structure to the directory. */
-    "rootDir": "./portal", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "rootDir": "./src/portal", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
     // "removeComments": true,                /* Do not emit comments to output. */
